clusters/talos-cluster/harbor/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-http-route
  namespace: harbor
spec:
  parentRefs:
    - kind: Gateway
      name: cilium-gateway
      namespace: gateway
  hostnames:
    - "harbor.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor
          port: 80
